--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "puppeteer": "^23.8.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
+  "puppeteer": "^23.8.0",
+  "puppeteer-extra": "^3.3.4",
+  "puppeteer-extra-plugin-stealth": "^2.11.1",
+  "express": "^4.18.2",
+  "cors": "^2.8.5"
+}
 }
